--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
 	<groupId>com.demo</groupId>
 	<artifactId>spring-boot-tdd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<modules>
+		<module>test-concepts</module>
+	</modules>
+	<packaging>pom</packaging>
 
 	<name>tdd</name>
 	<description>Spring project with TDD.</description>
